@@ -1,5 +1,10 @@
 2007-11-06  Chris Lord  <chris@openedhand.com>
 
+	* src/multitap-pad-main.c: (new_button):
+	Use an image packed into a button instead of the stock button
+
+2007-11-06  Chris Lord  <chris@openedhand.com>
+
 	* src/multitap-pad-main.c: (screen_size_changed_cb), (main):
 	Fix landscape orientation, add non-working --position option, change
 	--plug option to --xembed
